namespaceb.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: namespaceb
  labels:
    tag: serviceb
