ngnix-deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deploymentb
  namespace: namespaceb
spec:
  selector:
    matchLabels:
      type: system-created
  replicas: 2
  template:
    metadata:
      labels:
        type: system-created
        tag: serviceb
    spec:
      containers:
      - name: my-nginx-container-b
        image: nginx
        ports:
        - containerPort: 80
