ngnix-deployment-serviceb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deploymentb
  namespace: namespaceb
spec:
  selector:
    matchLabels:
      type: user-created
  replicas: 2
  template:
    metadata:
      labels:
        type: user-created
    spec:
      containers:
      - name: my-nginx-container-b
        image: nginx
        ports:
        - containerPort: 80
