podb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podb
  namespace: namespaceb
  labels:
    type: user-created
    tag: serviceb
spec:
  containers:
  - name: nginx-cont-podb
    image: nginx
    ports:
    - name: ngnixport
      containerPort: 6379
      protocol: TCP
