clusterIpa.yaml
kind: Service
apiVersion: v1
metadata:
  name: clusterip-servicea
  namespace: namespacea
spec:
  selector:
    type: user-created
  ports:
  - protocol: TCP
    port: 80
