clusterIpb.yaml
kind: Service
apiVersion: v1
metadata:
  name: clusterip-serviceb
  namespace: namespaceb
spec:
  selector:
    type: user-created
  ports:
  - protocol: TCP
    port: 80
