clusterip-service-a.yaml
kind: Service
apiVersion: v1
metadata:
  name: clusterip-servicea
  namespace: namespacea
spec:
  selector:
    tag: servicea
  ports:
  - protocol: TCP
    port: 80
