clusterip-service-b.yaml
kind: Service
apiVersion: v1
metadata:
  name: clusterip-serviceb
  namespace: namespaceb
spec:
  selector:
    tag: serviceb
  ports:
  - protocol: TCP
    port: 80
