allow-same-namespace-approach-1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-within-same-namespace
  namespace: namespacea
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            tag: servicea
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            tag: servicea
